assets/css/main.css
/* ... */
  .collapsible:after {
	content: '\002B';
	color: black;
	font-weight: bold;
	float: right;
	margin-left: 5px;
  }
  
  .collapsible.active:after {
	content: "\2212";
  }
  
  .flop {
	padding: 0 30px;
	max-height: 0;
	overflow: hidden;
	transition: max-height 0.4s ease-out;
	background-color: skyblue;
	font-size: 1.2em;
	border-top-left-radius: 0px;
	border-bottom-left-radius: 0px;
	border-top-right-radius: 0px;
	border-bottom-right-radius: 0px;
  }

